fix position A responsive ad z-index issue

--- a/app/assets/stylesheets/new/single.css.scss
+++ b/app/assets/stylesheets/new/single.css.scss
@@ -1099,7 +1099,7 @@ body.single .comments {
                         margin-left:-150px;
                         top:150px;
                         width:300px;
-                        z-index:1;
+                        z-index:3;
                     }
                 }
 
